# The-Dream-Robot

./: .gitignore  .gitmodules  README.md
dream-mobile-platform/: Dockerfile  rpi-installation-record.md
dream-mobile-platform/scripts/: LED_manager.py  camera_service.bash  pwm_servo_utils.py
setup-dream/setup_mobile_base/: configure_base.yml  hosts.ini  rpi-installation-record.md
setup-dream/setup_mobile_base/dot_files/: rpi_bashrc
src/dream_base_description/: CMakeLists.txt  README.md  package.xml
src/dream_base_description/config/: diff_params.yaml  view_robot.rviz
src/dream_base_description/launch/: dream_base_sim.launch
src/dream_base_description/meshes/: dancing_penguin.stl
src/dream_base_description/src/: dream_gazebo_diff_drive_plugin.cpp  turtle_drive_plugin.cpp
src/dream_base_description/urdf/: diff_drive.gazebo.xacro  diff_drive.urdf.xacro
src/dream_base_description/worlds/: uda_bird.world  uda_bot_house.world
src/dream_gmapping/: CMakeLists.txt  README.md  gmapping_implementation.md  gmapping_paper_reading.md  my_implementation_gmapping_paper_reading.md  package.xml  tmp_gazebo_plugin_dream_robot.md
src/dream_gmapping/bags/: 2024-02-04-22-36-26.bag  2024-02-18-23-18-45.bag  2024-03-12-18-59-49.bag  go_turn_go.bag  multiple_turns.bag  static.bag  straight.bag  turn.bag
src/dream_gmapping/include/dream_gmapping/: dream_gmapper.hpp  dream_gmapping.hpp  dream_gmapping_utils.hpp  dream_odometer.hpp  particle_filter.hpp
src/dream_gmapping/launch/: dream_gmapping.launch
src/dream_gmapping/rviz/: test_dream_gmapper.rviz  view_dream_gmapper.rviz
src/dream_gmapping/scripts/: 2dlocalizer.py  2dlocalizer_scratch.py  localizer_2d_utils.py
src/dream_gmapping/src/: dream_gmapper.cpp  dream_gmapping.cpp  main.cpp  odom_main.cpp
src/dream_gmapping/tests/: dream_gmapping_ros_test.py  test_dream_gmapping_rosconsole.config
src/dream_gmapping/tests/ros_tests/: dream_gmapping_ros.test  dream_gmapping_ros_test.py
src/dream_gmapping/tests/unit/: shared_test_utils.hpp  test_dream_gmapper.cpp  test_dream_gmapping_utils.cpp  test_particle_filter.cpp
src/dream_mobile_platform/: CMakeLists.txt  Dockerfile  README.md  dream_bashrc.sh  dream_feature_flags  package.xml  setup.py
src/dream_mobile_platform/config/: dream_resource_registry.yaml
src/dream_mobile_platform/launch/: low_level_drivers.launch
src/dream_mobile_platform/scripts/: LEFT_PID_PERFORMANCE.csv  LEFT_PID_PERFORMANCE_1.csv  RIGHT_PID_PERFORMANCE.csv  RIGHT_PID_PERFORMANCE_1.csv  camera_service.bash  dream_byobu  motor_driver.py  motor_encoder.py  pwm_led_manager.py  pwm_servo_utils.py  test_motors.py  test_tune_motor_controller.py  tune_motor_controller.py
src/dream_mobile_platform/scripts/test_data/: LEFT_FEEDFORWARD_TERMS.csv  LEFT_PID_PERFORMANCE.csv.feedforward_incremental  LEFT_PID_PERFORMANCE.csv.incremental  RIGHT_FEEDFORWARD_TERMS.csv  RIGHT_PID_PERFORMANCE.csv.feedforward_incremental  RIGHT_PID_PERFORMANCE.csv.incremental
src/dream_mobile_platform/src/dream_mobile_platform/: cmd_vel_to_motor_commands.py  keyboard_teleop.py  motor_controller.py  motor_driver.py  motor_encoder.py  pub_motor_driver.py  pwm_led_manager.py  pwm_servo_utils.py  rpi_scanner_node.py  test_waveshare_connection.py
src/dream_mobile_platform/srv/: ToggleLED.srv
src/dream_mobile_platform/tests/: compare_shm_ros_pubsub.py
src/dream_mobile_platform/tests/e2e/: compare_shm_ros_pubsub.py
src/dream_mobile_platform/tests/unit/: test_motor_controller.py  test_motor_encoder.py
src/ros_nav_packages/gmapping/: CMakeLists.txt  README.md
src/ros_nav_packages/gmapping/src/: slam_gmapping.cpp
src/ros_nav_packages/openslam_gmapping/: CMakeLists.txt
src/ros_nav_packages/openslam_gmapping/gridfastslam/: gridslamprocessor.cpp  motionmodel.cpp
src/ros_nav_packages/openslam_gmapping/gui/: gsp_thread.cpp
src/ros_nav_packages/openslam_gmapping/include/gmapping/gridfastslam/: gridslamprocessor.hxx
src/ros_nav_packages/openslam_gmapping/include/gmapping/scanmatcher/: scanmatcher.h
src/ros_nav_packages/openslam_gmapping/scanmatcher/: scanmatcher.cpp
src/setup-dream/setup_mobile_base/: configure_base.yml  hosts.ini  rpi-installation-record.md
src/setup-dream/setup_mobile_base/dot_files/: rpi_bashrc
