<?xml version="1.0"?>
<package format="2">
  <name>dream_base_description</name>
  <version>0.0.0</version>
  <description>The dream_base_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rjia@todo.todo">rjia</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_export_depend>gazebo_ros</build_export_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <build_depend>nuturtlebot</build_depend>
    <build_depend>gazebo</build_depend>
    <build_export_depend>gazebo</build_export_depend>
    <exec_depend>gazebo</exec_depend> 


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
