<?xml version="1.0"?>
<package format="2">
  <name>dream_base_description</name>
  <version>1.0.0</version>
  <description>Description of the dream mobile base</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ruotongjia2020@u.northwestern.edu">rjia</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD2</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <build_depend>gazebo_ros</build_depend>
    <build_export_depend>gazebo_ros</build_export_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <build_depend>nuturtlebot</build_depend>
    <build_depend>gazebo</build_depend>
    <build_export_depend>gazebo</build_export_depend>
    <exec_depend>gazebo</exec_depend> 
    <depend>tf2_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
