<?xml version="1.0"?>
<package format="2">
  <name>dream_gmapping</name>
  <version>0.0.1</version>
  <description>Rico's dream_gmapping package</description>

  <maintainer email="ruotongjia2020@u.northwestern.edu">Rico Jia</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
</package>
